GL/src/test/deca/codegen/valid/deca_sans_objet/if_Else/ifElse.deca
// Description :
// Test de if-else.
//
// Resultats :
// 0

{
    int x;
    x = -1;
    if (x > 0) {
        print(1);
    } else {
        print(0);
    }
}