GL/src/test/deca/codegen/invalid/modulo_par_zero.deca
{
    int x = 1, y = 0;
    
    println(x%y);

}